--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-asgiref==3.5.2
-beautifulsoup4==4.11.1
-black==22.8.0
-certifi==2022.9.24
+asgiref==3.6.0
+certifi==2022.12.7
 charset-normalizer==2.1.1
-click==8.1.3
 Django==4.1.1
-django-bootstrap-v5==1.0.11
+django-crispy-forms==1.14.0
 idna==3.4
 lxml==4.9.1
-mypy-extensions==0.4.3
-pathspec==0.10.1
-platformdirs==2.5.2
 psycopg2==2.9.3
+python-dotenv==0.21.0
 requests==2.28.1
-soupsieve==2.3.2.post1
-sqlparse==0.4.2
-tomli==2.0.1
-typing_extensions==4.3.0
-urllib3==1.26.12
+sqlparse==0.4.3
+urllib3==1.26.13
