--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.1.1
 django-crispy-forms==1.14.0
 idna==3.4
 lxml==4.9.1
+Pillow==9.3.0
 psycopg2==2.9.3
 python-dotenv==0.21.0
 requests==2.28.1
