--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ lxml==4.9.1
 Pillow==9.3.0
 psycopg2==2.9.3
 python-dotenv==0.21.0
-requests==2.28.1
+requests>=2.31.0
 sqlparse==0.4.3
 urllib3==1.26.13
